# tetris

./: .gitignore  CMakeLists.txt  Doxyfile  main  main.c  matrix.h  presentazione_progetto.key  readme.md  tetramini.h  tetris.h  utils.h  variables.h
src/: main.c
src/gamemodes/: gamemodes.h
src/gamemodes/modes/: BKsingleplayer.h  multiplayer.h  singleplayer.c  singleplayer.h
src/include/: headers.h
src/include/mylibs/: game.h  gamescreen.h  matrix.h  tetramini.h  tetris.h  utils.h  variables.h
